[gd_scene load_steps=4 format=3 uid="uid://bvmr46r6ql433"]

[ext_resource type="Script" path="res://scripts/enemy.gd" id="1_tbt5e"]
[ext_resource type="Texture2D" uid="uid://ctftrxirb4jis" path="res://assets/graphics/ui/hp_bar_empty.png" id="2_7bor0"]
[ext_resource type="Texture2D" uid="uid://c156sdquha6hx" path="res://assets/graphics/ui/hp_bar_full.png" id="3_cttta"]

[node name="Enemy" type="Control"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_tbt5e")

[node name="CenterContainer" type="CenterContainer" parent="."]
custom_minimum_size = Vector2(128, 128)
layout_mode = 0
offset_right = 128.0
offset_bottom = 128.0

[node name="Control" type="Control" parent="CenterContainer"]
layout_mode = 2
mouse_filter = 1

[node name="Sprite2D" type="Sprite2D" parent="CenterContainer/Control"]
unique_name_in_owner = true

[node name="HitPointsBar" type="TextureProgressBar" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 24)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -48.0
offset_right = 48.0
offset_bottom = 24.0
grow_horizontal = 2
nine_patch_stretch = true
stretch_margin_left = 10
stretch_margin_top = 10
stretch_margin_right = 10
stretch_margin_bottom = 10
texture_under = ExtResource("2_7bor0")
texture_progress = ExtResource("3_cttta")

[node name="HitPointsLabel" type="Label" parent="HitPointsBar"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -13.0
offset_top = -11.5
offset_right = 13.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 16
text = "X/Y"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
